// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ThirdPartyLookupForm should display form in minimised view 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            Test Form
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Show form for Test Form"
          >
            <Memo(ForwardRef(KeyboardArrowDownIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should display form without a secondary field 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            Incites
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Hide form for Incites"
          >
            <Memo(ForwardRef(KeyboardArrowUpIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <form>
        <p>
          tip 1
        </p>
        <div>
          <h4>
            UTs
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="primaryValue"
            fullWidth={true}
            name="primaryValue"
            onChange={[Function]}
            placeholder="Enter one or more UTs, separated by a comma"
            required={true}
            value=""
            variant="standard"
          />
        </div>
        <p />
        <ForwardRef(Button)
          aria-label="Submit to Incites"
          color="primary"
          onClick={[Function]}
          variant="contained"
        >
          Submit to Incites
        </ForwardRef(Button)>
      </form>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should fire the lookup action 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            Test Lookup Action Fired
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Hide form for Test Lookup Action Fired"
          >
            <Memo(ForwardRef(KeyboardArrowUpIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <form>
        <p>
          Tip 3
        </p>
        <div>
          <h4>
            PF 1
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="primaryValue"
            fullWidth={true}
            name="primaryValue"
            onChange={[Function]}
            placeholder=""
            required={true}
            value="blah"
            variant="standard"
          />
        </div>
        <p />
        <ForwardRef(Button)
          aria-label="Submit 1"
          color="primary"
          onClick={[Function]}
          variant="contained"
        >
          Submit 1
        </ForwardRef(Button)>
      </form>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should fire the lookup action when there is a secondary field 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            Test Lookup Action Fired7
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Hide form for Test Lookup Action Fired7"
          >
            <Memo(ForwardRef(KeyboardArrowUpIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <form>
        <p>
          Tip 7
        </p>
        <div>
          <h4>
            PF 7
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="primaryValue"
            fullWidth={true}
            name="primaryValue"
            onChange={[Function]}
            placeholder=""
            required={true}
            value="blah"
            variant="standard"
          />
        </div>
        <div>
          <h4>
            SF 7
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="secondaryValue"
            fullWidth={true}
            name="secondaryValue"
            onChange={[Function]}
            placeholder=""
            value="blah"
            variant="standard"
          />
        </div>
        <p />
        <ForwardRef(Button)
          aria-label="Submit 7"
          color="primary"
          onClick={[Function]}
          variant="contained"
        >
          Submit 7
        </ForwardRef(Button)>
      </form>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should show form with non-minimised form 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            Test Form
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Hide form for Test Form"
          >
            <Memo(ForwardRef(KeyboardArrowUpIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <form>
        <p />
        <div>
          <h4>
            UTs
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="primaryValue"
            fullWidth={true}
            name="primaryValue"
            onChange={[Function]}
            placeholder=""
            required={true}
            value=""
            variant="standard"
          />
        </div>
        <div>
          <h4>
            API Key
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="secondaryValue"
            fullWidth={true}
            name="secondaryValue"
            onChange={[Function]}
            placeholder=""
            value=""
            variant="standard"
          />
        </div>
        <p />
        <ForwardRef(Button)
          aria-label="Submit"
          color="primary"
          onClick={[Function]}
          variant="contained"
        >
          Submit
        </ForwardRef(Button)>
      </form>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should submit if fields are valid where no secondary field is required 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            Incites
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Hide form for Incites"
          >
            <Memo(ForwardRef(KeyboardArrowUpIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <form>
        <p>
          Tip 2
        </p>
        <div>
          <h4>
            UTs
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="primaryValue"
            fullWidth={true}
            name="primaryValue"
            onChange={[Function]}
            placeholder="Enter one or more UTs, separated by a comma"
            required={true}
            value="blah"
            variant="standard"
          />
        </div>
        <p />
        <ForwardRef(Button)
          aria-label="Submit to Incites"
          color="primary"
          onClick={[Function]}
          variant="contained"
        >
          Submit to Incites
        </ForwardRef(Button)>
      </form>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should toggle nested items on click 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            Test Form
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Show form for Test Form"
          >
            <Memo(ForwardRef(KeyboardArrowDownIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should toggle nested items on click 2`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            Test Form
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Hide form for Test Form"
          >
            <Memo(ForwardRef(KeyboardArrowUpIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <form>
        <p />
        <div>
          <h4>
            UTs
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="primaryValue"
            fullWidth={true}
            name="primaryValue"
            onChange={[Function]}
            placeholder=""
            required={true}
            value=""
            variant="standard"
          />
        </div>
        <div>
          <h4>
            API Key
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="secondaryValue"
            fullWidth={true}
            name="secondaryValue"
            onChange={[Function]}
            placeholder=""
            value=""
            variant="standard"
          />
        </div>
        <p />
        <ForwardRef(Button)
          aria-label="Submit"
          color="primary"
          onClick={[Function]}
          variant="contained"
        >
          Submit
        </ForwardRef(Button)>
      </form>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should toggle nested items on click 3`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            Test Form
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Show form for Test Form"
          >
            <Memo(ForwardRef(KeyboardArrowDownIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should use defaults when locale values are not provided 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            this form
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Test hide this form"
          >
            <Memo(ForwardRef(KeyboardArrowUpIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <form>
        <p />
        <div>
          <h4>
            PF3
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="primaryValue"
            fullWidth={true}
            name="primaryValue"
            onChange={[Function]}
            placeholder=""
            required={true}
            value=""
            variant="standard"
          />
        </div>
        <div>
          <h4>
            SF3
          </h4>
          <p />
          <ForwardRef(TextField)
            aria-label=""
            className="secondaryValue"
            fullWidth={true}
            name="secondaryValue"
            onChange={[Function]}
            placeholder=""
            value=""
            variant="standard"
          />
        </div>
        <p>
          test bottom tip
        </p>
        <ForwardRef(Button)
          aria-label="Submit"
          color="primary"
          onClick={[Function]}
          variant="contained"
        >
          Submit
        </ForwardRef(Button)>
      </form>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Component ThirdPartyLookupForm should use locale values when provided 1`] = `
<ForwardRef(Grid)
  container={true}
  spacing={3}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <StandardCard
      noHeader={true}
    >
      <ForwardRef(Grid)
        container={true}
        spacing={3}
      >
        <ForwardRef(Grid)
          item={true}
          style={
            Object {
              "flexGrow": 1,
              "width": 1,
            }
          }
        >
          <ForwardRef(Typography)
            variant="h5"
          >
            this form
          </ForwardRef(Typography)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(IconButton)
            onClick={[Function]}
            size="large"
            tooltip="Hide form for this form"
          >
            <Memo(ForwardRef(KeyboardArrowUpIcon)) />
          </ForwardRef(IconButton)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <form>
        <p />
        <div>
          <h4>
            PF 2
          </h4>
          <p>
            Tip 2p
          </p>
          <ForwardRef(TextField)
            aria-label="aria pf2"
            className="primaryValue"
            fullWidth={true}
            name="primaryValue"
            onChange={[Function]}
            placeholder="placeholder 2p"
            required={true}
            value=""
            variant="standard"
          />
        </div>
        <div>
          <h4>
            SF2
          </h4>
          <p>
            tip 2S
          </p>
          <ForwardRef(TextField)
            aria-label="aria sf2"
            className="secondaryValue"
            fullWidth={true}
            name="secondaryValue"
            onChange={[Function]}
            placeholder="placeholder 2s"
            value=""
            variant="standard"
          />
        </div>
        <p />
        <ForwardRef(Button)
          aria-label="Submit2"
          color="primary"
          onClick={[Function]}
          variant="contained"
        >
          Submit2
        </ForwardRef(Button)>
      </form>
    </StandardCard>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;
